--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,15 @@ dependencies:
   google_fonts: ^6.1.0
   social_media_buttons: ^1.0.0
   url_launcher: ^6.0.20
+  json_annotation: ^4.8.0
+  envied: ^0.5.3
+  http: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.8
+  json_serializable: ^6.6.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -49,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  envied_generator: ^0.5.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
